--- a/WebContent/WEB-INF/zul/controlpanel.zul
+++ b/WebContent/WEB-INF/zul/controlpanel.zul
@@ -24,6 +24,8 @@
 				label="Schema" />
 			<tab id="tabQuery" visible="@{index.queryRights}"
 				label="Query" />
+			<tab id="tabRenderer" visible="@{index.queryRights}"
+				label="Renderer" />
 			<tab id="tabUpdate" visible="@{index.updateRights}"
 				label="Update" />
 			<tab id="tabDelete" visible="@{index.updateRights}"
@@ -48,6 +50,9 @@
 			</tabpanel>
 			<tabpanel fulfill="tabQuery.onSelect">
 				<include src="WEB-INF/zul/query/index.zul" />
+			</tabpanel>
+			<tabpanel fulfill="tabRenderer.onSelect">
+				<include src="WEB-INF/zul/renderer/index.zul" />
 			</tabpanel>
 			<tabpanel fulfill="tabUpdate.onSelect">
 				<include src="WEB-INF/zul/update/index.zul" />
