--- a/WebContent/WEB-INF/zul/query/filters.zul
+++ b/WebContent/WEB-INF/zul/query/filters.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for Jaeksoft OpenSearchServer
-	Copyright (C) 2008-2010 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2008-2011 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of Jaeksoft OpenSearchServer.
 	Jaeksoft OpenSearchServer is free software: you can
@@ -16,12 +16,20 @@
 -->
 <window id="filters"
 	use="com.jaeksoft.searchlib.web.controller.query.FiltersController">
-	<grid model="@{filters.request.filterList.toArray}"
-		rowRenderer="@{filters.filterRenderer}">
+	<grid model="@{filters.request.filterList.toArray}">
 		<columns>
 			<column label="Query string" />
+			<column label="Negative" />
 			<column label="Action" />
 		</columns>
+		<rows>
+			<row self="@{each=filter}">
+				<custom-attributes filterItem="@{filter}" />
+				<textbox value="@{filter.queryString}" width="90%" />
+				<checkbox label="Negative" checked="@{filter.negative}" />
+				<button label="Remove" onClick="filters.onFilterRemove(self)" />
+			</row>
+		</rows>
 		<foot>
 			<footer span="2">
 				<button label="add filter" forward="onFilterAdd" />
