--- a/WebContent/WEB-INF/zul/renderer/edit.zul
+++ b/WebContent/WEB-INF/zul/renderer/edit.zul
@@ -34,6 +34,102 @@
 						<combobox model="@{renderer.requestList}"
 							width="200px" value="@{renderer.currentRenderer.requestName}" />
 					</row>
+					<row>
+						<label value="Search button label: " />
+						<textbox
+							value="@{renderer.currentRenderer.searchButtonLabel}" cols="50" />
+					</row>
+					<row>
+						<label value="Common CSS style: " />
+						<textbox
+							value="@{renderer.currentRenderer.style}" cols="100"
+							multiline="true" rows="5" />
+					</row>
+					<row>
+						<label value="Input CSS style: " />
+						<textbox
+							value="@{renderer.currentRenderer.inputStyle}" cols="100" />
+					</row>
+					<row>
+						<label value="Fields: " />
+						<listbox
+							model="@{renderer.currentRenderer.fields}"
+							selectedItem="@{renderer.selectedRendererField}">
+							<listhead>
+								<listheader label="Field / Snippet" />
+								<listheader label="CSS Style" />
+								<listheader label="URL Field" />
+								<listheader label="Action"
+									align="center" width="150px" />
+							</listhead>
+							<auxhead>
+								<auxheader>
+									<listbox
+										model="@{renderer.fieldTypeList}"
+										selectedItem="@{renderer.currentRendererField.fieldType}"
+										onSelect="renderer.onReload()" mold="select" />
+									<listbox
+										model="@{renderer.fieldOrSnippetList}"
+										selectedItem="@{renderer.currentRendererField.fieldName}"
+										mold="select" />
+								</auxheader>
+								<auxheader>
+									<textbox
+										value="@{renderer.currentRendererField.style}" width="95%" />
+								</auxheader>
+								<auxheader>
+									<listbox
+										model="@{renderer.fieldList}"
+										selectedItem="@{renderer.currentRendererField.urlFieldName}"
+										mold="select" />
+								</auxheader>
+								<auxheader align="center">
+									<button tooltiptext="Add a field"
+										visible="@{renderer.notFieldSelected}"
+										image="/images/action_add.png"
+										onClick="renderer.onRendererFieldSave()" />
+									<hbox
+										visible="@{renderer.fieldSelected}">
+										<button
+											tooltiptext="Save a field" label="Save"
+											onClick="renderer.onRendererFieldSave()" />
+										<button
+											tooltiptext="Save a field" label="Cancel"
+											onClick="renderer.onRendererFieldCancel()" />
+									</hbox>
+								</auxheader>
+							</auxhead>
+							<listitem
+								self="@{each=rendererFieldItem}">
+								<custom-attributes
+									rendererFieldItem="@{rendererFieldItem}" />
+								<listcell>
+									<label
+										value="@{rendererFieldItem.fieldType}" />
+									<label value=": " />
+									<label
+										value="@{rendererFieldItem.fieldName}" />
+								</listcell>
+								<listcell
+									label="@{rendererFieldItem.style}" />
+								<listcell
+									label="@{rendererFieldItem.urlFieldName}" />
+								<listcell>
+									<button
+										tooltiptext="Move the field up" image="/images/arrow_top.png"
+										onClick="renderer.onRendererFieldUp(self)" />
+									<button
+										tooltiptext="Move the field down"
+										image="/images/arrow_down.png"
+										onClick="renderer.onRendererFieldDown(self)" />
+									<space />
+									<button tooltiptext="Remove a field"
+										image="/images/action_delete.png"
+										onClick="renderer.onRendererFieldRemove(self)" />
+								</listcell>
+							</listitem>
+						</listbox>
+					</row>
 				</rows>
 				<foot>
 					<footer span="2">
@@ -67,6 +163,8 @@
 				<intbox value="@{renderer.iframeHeight}" />
 				<space />
 				<button label="Test" onClick="renderer.onTest(self)" />
+				<textbox cols="100" rows="3" readonly="true"
+					value="@{renderer.iFrameHtmlCode}" />
 			</hbox>
 		</caption>
 		<panelchildren>
