Fix a bug with the screenshot image

--- a/WebContent/WEB-INF/zul/crawler/web/screenshot/capture.zul
+++ b/WebContent/WEB-INF/zul/crawler/web/screenshot/capture.zul
@@ -39,7 +39,7 @@
 		</rows>
 	</grid>
 	<vbox visible="@{screenshot.imageAvailable}">
-		<image id="img" content="@{screenshot.image}" />
+		<image id="img" />
 		<hbox>
 			<button label="Image URL"
 				tooltiptext="@{screenshot.getApiImageUrl}"
