New feature 3370376: Parser have editable parameters

--- a/WebContent/WEB-INF/zul/schema/parserList.zul
+++ b/WebContent/WEB-INF/zul/schema/parserList.zul
@@ -24,7 +24,43 @@
 			<listitem self="@{each=parser}"
 				label="@{parser.parserName}" />
 		</listbox>
+		
+		
 	</hbox>
+		<separator height="5px" />
+	<vbox width="100%" visible="@{parserList.parserSelected}">
+		<panel title="Parser Attributes" border="normal">
+			<panelchildren>
+			<listbox>
+					<listhead>
+						<listheader label="Property" />
+						<listheader label="Value" />
+					 </listhead>
+				 <listitem>
+				 	<listcell>
+						<listbox mold="select" 
+					 	 	selectedItem="@{parserList.selectedAttributeField}" 
+					 	 	model="@{parserList.selectedParser.newParser.propertyList}">
+								<listitem self="@{each=parserproperty}"
+									label="@{parserproperty.label}" />
+							</listbox>
+					</listcell>
+					<listcell>
+							<textbox id="selectedAttributeValue"/>
+					</listcell>
+					 
+					
+					</listitem>
+					<listfoot>
+					<listfooter>	<button tooltiptext="Save Parser Attribute" label="Save"
+										  forward="onParserAttributeAdd" />
+						</listfooter></listfoot>
+						</listbox>
+			</panelchildren>
+		</panel>
+		</vbox>
+		
+		<separator height="5px" />
 	<separator height="5px" />
 	<vbox width="100%" visible="@{parserList.parserSelected}">
 		<panel title="Supported extension" border="normal">
